# promptlab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/promptlab/: __init__.py  __main__.py  cli.py  config.py  evaluators.py  reporter.py  runner.py  utils.py
src/promptlab/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
tests/: conftest.py  test_cli.py  test_config.py  test_evaluators.py  test_runner.py
