[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptlab-ai"
version = "0.1.0"
description = "pytest for your prompts — test, compare, and benchmark prompts across LLMs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "aamirHafeez" }]
keywords = ["llm", "prompt-engineering", "testing", "benchmark", "evaluation", "openai", "anthropic", "gemini", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
promptlab = "promptlab.cli:main"

[project.urls]
Homepage = "https://github.com/aamirHafeez/promptlab"
Repository = "https://github.com/aamirHafeez/promptlab"
Issues = "https://github.com/aamirHafeez/promptlab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/promptlab"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
